[gd_scene load_steps=5 format=3 uid="uid://2c8wkrhnuh73"]

[ext_resource type="Script" path="res://Scripts/Data/throw2D.gd" id="1_6j7g8"]
[ext_resource type="Script" path="res://Scripts/Data/hitbox2D_collision.gd" id="2_a0v5b"]
[ext_resource type="Script" path="res://addons/godot-rollback-netcode/NetworkTimer.gd" id="3_fqft2"]

[sub_resource type="SGRectangleShape2D" id="SGRectangleShape2D_seygm"]

[node name="Throw" type="SGArea2D" node_paths=PackedStringArray("timer")]
collision_layer = 128
collision_mask = 64
script = ExtResource("1_6j7g8")
timer = NodePath("NetworkTimer")

[node name="CollisionShape3D" type="SGCollisionShape2D" parent="."]
shape = SubResource("SGRectangleShape2D_seygm")
disabled = true
script = ExtResource("2_a0v5b")

[node name="NetworkTimer" type="Node" parent="."]
script = ExtResource("3_fqft2")
one_shot = true

[connection signal="tell_script" from="." to="CollisionShape3D" method="_on_hitbox_tell_script"]
[connection signal="timeout" from="NetworkTimer" to="." method="_on_network_timer_timeout"]
